Bug 1151149 - Throw if either the target or handler is a revoked proxy in Proxy constructor. r=efaust